[package]
name = "leptos_oidc2"
version = "0.3.1"
edition = "2021"
description = "A Leptos utility library for simplified OpenID Connect (OIDC) authentication integration."
keywords = ["leptos", "auth", "oidc", "openidconnect", "oauth"]
categories = ["web-programming", "api-bindings", "network-programming"]
authors = [
    "Daniél Kerkmann <daniel@kerkmann.dev>",
    "Niklas Scheerhoorn <sinner1991@gmail.com>",
]
license = "MIT"
repository = "https://gitlab.com/kerkmann/leptos_oidc"
documentation = "https://docs.rs/leptos_oidc"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
jsonwebtoken = { version = "9.2", default-features = false }
jwt = "0.16"
leptos = { version = "0.5", default-features = false }
leptos_router = { version = "0.5", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "serde_json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["Storage"] }
